--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <input type="file" id="pdf-upload" accept="application/pdf">
 
     <div id="button-container">
-        <button id="submit-btn">Enviar para o Backend</button>
+        <button id="submit-btn">Converter para CSV</button>
         <button id="download-csv-btn">Baixar CSV</button>
     </div>
     <script>
