--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>PDF Table Selector</title>
     <script src="./Build/pdf.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <style>
         body {
             display: flex;
@@ -207,10 +208,12 @@
         #download-csv-btn:hover {
             background-color: #0056b3;
         }
-        #download-csv-btn:disabled{
+
+        #download-csv-btn:disabled {
             background-color: #01264e;
             color: gray;
         }
+
         #pdf-upload {
             position: fixed;
             top: 20px;
@@ -264,7 +267,7 @@
     <input type="file" id="pdf-upload" accept="application/pdf">
 
     <div id="button-container">
-        <button id="submit-btn">Enviar para o Backend</button>
+        <button id="submit-btn">Processar PDF</button>
         <button id="download-csv-btn" disabled>Baixar CSV</button>
     </div>
     <script>
@@ -382,17 +385,30 @@
             formData.append('areas', JSON.stringify(selectedAreas));
 
             try {
+                Toastify({
+                    text: "Processando PDF, aguarde um momento...",
+                    className: "info"
+                }).showToast();
                 const response = await fetch('https://pythonextracttablles-production.up.railway.app/gettables', {
                     method: 'POST',
                     body: formData
                 })
+
 
                 if (!response.ok) throw new Error('Erro ao enviar o formulário');
 
                 const data = await response.json();
                 displayResults(data);
             } catch (error) {
-                console.log("Arquivo está pronto para download")
+                Toastify({
+                    text: "PDF processado com sucesso! O PDF está pronto para download.",
+                    className: "success",
+                    style: {
+                        background: "linear-gradient(to right, #00b09b, #96c93d)",
+                    },
+
+                    
+                }).showToast();
                 document.getElementById("download-csv-btn").disabled = false;
 
             }
@@ -409,10 +425,21 @@
             formData.append('areas', JSON.stringify(selectedAreas));
 
             try {
+                Toastify({
+                    text: "Preparando o arquivo para download",
+                    className: "info"
+                }).showToast();
                 const response = await fetch('https://pythonextracttablles-production.up.railway.app/gettables', {
                     method: 'POST',
                     body: formData
                 });
+                Toastify({
+                    text: "Download concluído!",
+                    className: "success",
+                    style: {
+                        background: "linear-gradient(to right, #00b09b, #96c93d)",
+                    }
+                }).showToast();
 
                 if (!response.ok) throw new Error('Erro ao baixar o CSV');
 
@@ -427,6 +454,8 @@
         });
 
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </body>
 
 </html>
